[gd_scene load_steps=16 format=3 uid="uid://ds111l8vlhc0o"]

[ext_resource type="Shader" uid="uid://cscn0e82hjbot" path="res://scenes/jukebox_menu.gdshader" id="1_baqcq"]
[ext_resource type="Script" uid="uid://bljialeyph7ho" path="res://scenes/jukebox_menu.gd" id="1_v7iqn"]
[ext_resource type="Texture2D" uid="uid://b5x8yg3gy8ufi" path="res://pics/Title screen/Loading screen - BG.png" id="2_bcrpn"]
[ext_resource type="Texture2D" uid="uid://cqpb5erwi8ha6" path="res://pics/Jukebox menu/Back to main - base.png" id="3_c3ie5"]
[ext_resource type="Texture2D" uid="uid://cgqvcgkahg6jv" path="res://pics/Jukebox menu/Back to main - click.png" id="4_jeoib"]
[ext_resource type="Texture2D" uid="uid://pe7cyt1x0x6g" path="res://pics/Jukebox menu/Back to main - hover.png" id="5_4at8s"]
[ext_resource type="Texture2D" uid="uid://cmy3s8gwgr66v" path="res://pics/Jukebox menu/left - base.png" id="7_70g38"]
[ext_resource type="Texture2D" uid="uid://c56enqvv1i661" path="res://pics/Jukebox menu/left - click.png" id="8_yvbmj"]
[ext_resource type="Texture2D" uid="uid://c4m8f61boy1x6" path="res://pics/Jukebox menu/left - hover.png" id="9_3lx05"]
[ext_resource type="Texture2D" uid="uid://4lirmidviaba" path="res://pics/Jukebox menu/right - base.png" id="10_27s86"]
[ext_resource type="FontFile" uid="uid://fvwl7rilu2v8" path="res://fonts/Husky Stash.otf" id="10_yvbmj"]
[ext_resource type="Texture2D" uid="uid://cn6hremlp6ro3" path="res://pics/Jukebox menu/right - click.png" id="11_00ucp"]
[ext_resource type="Texture2D" uid="uid://cmak1yd7gx876" path="res://pics/Jukebox menu/right - hover.png" id="12_6w0bt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wccnp"]
shader = ExtResource("1_baqcq")
shader_parameter/speed = 0.01

[sub_resource type="LabelSettings" id="LabelSettings_3lx05"]
font = ExtResource("10_yvbmj")
font_size = 75
font_color = Color(1, 0.380392, 0, 1)
outline_size = 30
outline_color = Color(0.0627451, 0.0156863, 0.137255, 1)
shadow_size = 55
shadow_color = Color(1, 1, 1, 1)

[node name="JukeboxMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v7iqn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0392157, 1)

[node name="MenuBG" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_wccnp")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bcrpn")

[node name="BackToMain" type="TextureButton" parent="MenuBG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -307.0
offset_right = 230.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_c3ie5")
texture_pressed = ExtResource("4_jeoib")
texture_hover = ExtResource("5_4at8s")

[node name="LeftButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.423148
anchor_right = 0.241667
anchor_bottom = 0.576852
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("7_70g38")
texture_pressed = ExtResource("8_yvbmj")
texture_hover = ExtResource("9_3lx05")
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="TrackTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.247917
anchor_top = 0.235185
anchor_right = 0.752083
anchor_bottom = 0.741667
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_3lx05")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="RightButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.728125
anchor_top = 0.387963
anchor_right = 1.0
anchor_bottom = 0.612037
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("10_27s86")
texture_pressed = ExtResource("11_00ucp")
texture_hover = ExtResource("12_6w0bt")
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="AudioPlayed" type="AudioStreamPlayer" parent="."]

[node name="RepeatTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="MenuBG/BackToMain" to="." method="_on_back_to_main_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="finished" from="AudioPlayed" to="." method="_on_audio_played_finished"]
[connection signal="timeout" from="RepeatTimer" to="." method="_on_repeat_timer_timeout"]
